<resources>
    <string name="app_name">GlfxAnd</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_title_adjust">---- Adjust -----</string>
    <string name="menu_adjust_brightness_contrast">Brightness / Contrast</string>
    <string name="menu_adjust_hue_saturation">Hue / Saturation</string>
    <string name="menu_adjust_vibrance">Vibrance</string>
    <string name="menu_adjust_denoise">Denoise</string>
    <string name="menu_adjust_unsharp_mask">Unsharp Mask</string>
    <string name="menu_adjust_noise">Noise</string>
    <string name="menu_adjust_sepia">Sepia</string>
    <string name="menu_adjust_vignette">Vignette</string>

    <string name="menu_title_blur">---- Blur -----</string>
    <string name="menu_blur_zoom_blur">Zoom Blur</string>
    <string name="menu_blur_triangle_blur">Triangle Blur</string>
    <string name="menu_blur_tilt_shift">Tilt Shift</string>
    <string name="menu_blur_lens_blur">Lens Blur</string>

    <string name="menu_title_warp">---- Warp -----</string>
    <string name="menu_warp_swirl">Swirl</string>
    <string name="menu_warp_bulge_pinch">Bulge / Pinch</string>
    <string name="menu_warp_perspective">Perspective</string>

    <string name="menu_title_fun">---- Fun -----</string>
    <string name="menu_fun_ink">Ink</string>
    <string name="menu_fun_edge_work">Edge Work</string>
    <string name="menu_fun_hexagonal_pixelate">Hexagonal Pixelate</string>
    <string name="menu_fun_dot_screen">Dot Screen</string>
    <string name="menu_fun_color_halftone">Color Halftone</string>
    <string name="text_header_desc">An image effects library for Android base on glfx.js</string>


</resources>
